Add tests and clean up code